<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/sidebar_drawer"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.rajora.arun.chat.chit.chitchat.activities.ChatActivity">

	<android.support.design.widget.CoordinatorLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<android.support.design.widget.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:background="?attr/colorPrimary"
				android:minHeight="?attr/actionBarSize"
				android:padding="0dp"
				app:contentInsetEnd="0dp"
				app:contentInsetLeft="0dp"
				app:contentInsetRight="0dp"
				app:contentInsetStart="0dp"
				app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="0dp"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:padding="0dp">

					<ImageView
						android:id="@+id/go_back"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:background="?attr/selectableItemBackgroundBorderless"
						android:contentDescription="@string/go_back_content_description"
						android:padding="@dimen/chat_go_back_padding"
						android:scaleType="centerInside"
						android:src="@drawable/ic_keyboard_arrow_left_white"/>

					<android.support.v7.widget.CardView
						android:id="@+id/chat_image_container"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/chat_image_margin"
						android:transitionName="@string/pic_transition_name"
						app:cardCornerRadius="@dimen/chat_image_radius">

						<ImageView
							android:id="@+id/chat_image"
							android:layout_width="@dimen/chat_image_dime"
							android:layout_height="@dimen/chat_image_dime"
							android:contentDescription="@string/profile_pic_content_description"
							android:src="@drawable/empty_profile_pic"/>
					</android.support.v7.widget.CardView>

					<TextView
						android:id="@+id/chat_name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:ellipsize="end"
						android:maxLines="1"
						android:textColor="@android:color/white"
						android:textSize="@dimen/chat_heading_textsize"/>
				</LinearLayout>
			</android.support.v7.widget.Toolbar>
		</android.support.design.widget.AppBarLayout>

		<fragment xmlns:android="http://schemas.android.com/apk/res/android"
		          xmlns:app="http://schemas.android.com/apk/res-auto"
		          xmlns:tools="http://schemas.android.com/tools"
		          android:id="@+id/fragment"
		          android:name="com.rajora.arun.chat.chit.chitchat.fragments.ChatActivityFragment"
		          android:layout_width="match_parent"
		          android:layout_height="match_parent"
		          app:layout_behavior="@string/appbar_scrolling_view_behavior"
		          tools:layout="@layout/fragment_chat"/>
	</android.support.design.widget.CoordinatorLayout>

	<android.support.v7.widget.RecyclerView
		android:id="@+id/sidebar_recycler_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="start"
		android:layout_marginLeft="@dimen/sidebar_recyclerview_margin"
		android:layout_marginStart="@dimen/sidebar_recyclerview_margin"/>
</android.support.v4.widget.DrawerLayout>